# git

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  task.md  vcpkg.json
utils/: Platform.h  sha1.cpp  sha1.h  zstr.hpp
